--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!doctype html>
+<html>
+<head>
+  <!-- ... -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="/tailwind.css" rel="stylesheet">
+</head>
+<body>
+  Hello Great World!
+</body>
+</html>
